Slightly fix topic (wrapping), still broken for long topics like #node.js.

--- a/css/main.less
+++ b/css/main.less
@@ -230,11 +230,11 @@ header {
     color: @color-topic;
     font-size: 0.8em;
     width: 100%;
-    padding: 0 130px;
     overflow: hidden;
     position: absolute;
-    left: 0;
     top: 0;
+    right: 0;
+    padding: 0 130px;
     white-space: nowrap;
   }
   
